Добавлена регистрация и логирование
